RESOLVED FIXED100727
[Qt][Mac] r132858 broke the build
https://bugs.webkit.org/show_bug.cgi?id=100727
Summary [Qt][Mac] r132858 broke the build
Csaba Osztrogonác
Reported 2012-10-29 23:01:56 PDT
/Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/text/cf/AtomicStringCF.cpp:37:5: error: use of undeclared identifier 'CFIndex' CFIndex length = CFStringGetLength(string); ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/text/cf/AtomicStringCF.cpp:39:89: error: use of undeclared identifier 'kCFStringEncodingISOLatin1' if (const LChar* ptr = reinterpret_cast<const LChar*>(CFStringGetCStringPtr(string, kCFStringEncodingISOLatin1))) ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/text/cf/AtomicStringCF.cpp:40:25: error: call to non-static member function without an object argument return add(ptr, length); ^~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/text/cf/AtomicStringCF.cpp:42:15: error: unknown type name 'UniChar'; did you mean 'UChar'? if (const UniChar* ptr = CFStringGetCharactersPtr(string)) ^~~~~~~ UChar /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/icu/unicode/umachine.h:316:22: note: 'UChar' declared here typedef uint16_t UChar; ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/text/cf/AtomicStringCF.cpp:42:30: error: use of undeclared identifier 'CFStringGetCharactersPtr' if (const UniChar* ptr = CFStringGetCharactersPtr(string)) ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/text/cf/AtomicStringCF.cpp:43:57: error: call to non-static member function without an object argument return add(reinterpret_cast<const UChar*>(ptr), length); ^~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/text/cf/AtomicStringCF.cpp:45:12: error: use of undeclared identifier 'UniChar'; did you mean 'UChar'? Vector<UniChar, 1024> ucharBuffer(length); ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/text/cf/AtomicStringCF.cpp:46:50: error: call to non-static member function without an object argument CFStringGetCharacters(string, CFRangeMake(0, length), ucharBuffer.data()); ^~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/text/cf/AtomicStringCF.cpp:47:47: error: use of undeclared identifier 'ucharBuffer' return add(reinterpret_cast<const UChar*>(ucharBuffer.data()), length); ^ 9 errors generated. make[3]: *** [obj/release/platform/text/cf/AtomicStringCF.o] Error 1
Attachments
proposed patch (977 bytes, patch)
2012-10-30 01:33 PDT, Ádám Kallai
webkit.review.bot: commit-queue-
proposed patch (988 bytes, patch)
2012-10-30 01:44 PDT, Ádám Kallai
no flags
Ádám Kallai
Comment 1 2012-10-30 01:33:56 PDT
Created attachment 171394 [details] proposed patch Include missing header.
WebKit Review Bot
Comment 2 2012-10-30 01:37:17 PDT
Comment on attachment 171394 [details] proposed patch Rejecting attachment 171394 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14643033
Ádám Kallai
Comment 3 2012-10-30 01:44:11 PDT
Created attachment 171399 [details] proposed patch Fix ChangeLog.
Csaba Osztrogonác
Comment 4 2012-10-30 04:05:12 PDT
Comment on attachment 171399 [details] proposed patch Clearing flags on attachment: 171399 Committed r132891: <http://trac.webkit.org/changeset/132891>
Csaba Osztrogonác
Comment 5 2012-10-30 04:05:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.