[Qt][Mac] Unreviewed build fix. https://bugs.webkit.org/show_bug.cgi?id=100727.

Speculative build fix after 132858. Include missing CoreFoundation/CoreFoundation.h header.

Patch by Ádám Kallai <kadam@inf.u-szeged.hu> on 2012-10-30

* platform/text/cf/AtomicStringCF.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@132891 bbb929c8-8fbe-4397-9dbb-9b2b20218538