third_party/WebKit/Source/WebCore/platform/text/cf/AtomicStringCF.cpp
@@ -29,6 +29,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #if USE(CF)
 
+#include <CoreFoundation/CoreFoundation.h>
 #include <wtf/text/CString.h>
 
 namespace WTF {
